deployments/builderDeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagebuilder
  labels:
    app: imagebuilder
spec:
  ports:
    - port: 3000
  selector:
    app: imagebuilder
  type: ClusterIP

---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: imagebuilder
  labels:
    app: imagebuilder
spec:
  selector:
    matchLabels:
      app: imagebuilder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: imagebuilder
    spec:
      hostAliases:
      - ip: "10.0.50.31"
        hostnames:
        - "registry.auto.go.kr"
      nodeSelector:
        role: worker
      containers:
      - image: registry.auto.go.kr:31365/dockerimagebuilder
        name: imagebuilder
        ports:
        - containerPort: 3000
          name: imagebuilder
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/dockerImageBuilder/config
      volumes:
      - name: config-volume
        configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
          name: builder-config  

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: builder-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: builder.auto.go.kr
    http:
      paths:
      - path: /
        backend:
          serviceName: imagebuilder
          servicePort: 3000
